deploy/base/envoy/files/envoy.yaml
static_resources:
  clusters:
    - name: some_service
      connect_timeout: 10s
      type: STRICT_DNS
      dns_refresh_rate: 1s
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: apiserver
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: longpoll
                      port_value: 8000


  listeners:
    - name: ingress
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                access_log:
                  - name: envoy.access_loggers.file
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: /dev/stdout
                stat_prefix: ingress

                request_headers_timeout: 0s
                upgrade_configs:
                  - upgrade_type: websocket
                http_filters:
                  # This is mandatory in order to have the HTTP routes above.
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

                route_config:
                  name: localhost
                  virtual_hosts:
                    - name: localhost
                      domains: [ "*" ]
                      routes:
                        - match: { prefix: "/" }
                          route:
                            timeout: 0s
                            idle_timeout: 0s
                            cluster: some_service
